...
                android:visibility="gone">

                <include layout="@layout/activity_detail_cinema_shimmer" />
            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/detail_movie_activity_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">

                <LinearLayout
                    android:layout_width="match_parent"
...
                                android:scaleType="fitXY"
                                tools:src="@tools:sample/backgrounds/scenic" />

                        </com.google.android.material.card.MaterialCardView>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_back"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/circle_back_button"
                            app:backgroundTint="@color/black"
                            app:icon="@drawable/ic_baseline_arrow_back_ios_white_24"
                            app:iconGravity="textEnd"
                            app:iconSize="20sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_favorite"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/circle_back_button"
                            app:backgroundTint="@color/black"
                            app:icon="@drawable/ic_baseline_favorite_border_white_24"
...
