...

            </GridLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tv_shows"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="?attr/actionBarSize"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
...
