...
                android:visibility="gone">

                <include layout="@layout/activity_detail_cinema_shimmer" />
            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/detail_tvshow_activity_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray">

                <LinearLayout
                    android:layout_width="match_parent"
...
